blog auto backup script's commit

--- a/source/_posts/15.md
+++ b/source/_posts/15.md
@@ -4,7 +4,7 @@ author: 不安きのこ
 avatar: 'https://i.loli.net/2020/02/09/KxCtIyfFesrv4Zw.jpg'
 authorLink: 'https://fuann-kinoko.github.io/'
 comments: true
-photos: 'https://cdn.jsdelivr.net/gh/Fuann-Kinoko/cdn@0.1/posts/oi/'
+photos: 'https://i.loli.net/2020/02/09/C3KAxzGPo9TnSHq.jpg'
 date: 2020-02-09 14:17:41
 categories: 随想
 tags: Math
