blog auto backup script's commit

--- a/themes/Sakura/languages/zh-cn.yml
+++ b/themes/Sakura/languages/zh-cn.yml
@@ -63,3 +63,5 @@ TRPG:
     img: https://cdn.jsdelivr.net/gh/Fuann-Kinoko/cdn@0.1/banner/TRPG.jpg
 OI:
     img: https://cdn.jsdelivr.net/gh/Fuann-Kinoko/cdn@0.1/banner/oi.png
+Math:
+    img: 
