blog auto backup script's commit

--- a/source/_posts/15.md
+++ b/source/_posts/15.md
@@ -1,7 +1,7 @@
 ---
 title: 有关C(n+k-1,2k-1)的代数意义及证明
 author: 不安きのこ
-avatar: 'https://i.loli.net/2020/02/09/KxCtIyfFesrv4Zw.jpg'
+avatar: 'https://bbs.bemanicn.cc/uc_server/avatar.php?uid=4174&size=big'
 authorLink: 'https://fuann-kinoko.github.io/'
 comments: true
 photos: 'https://i.loli.net/2020/02/09/C3KAxzGPo9TnSHq.jpg'
