blog auto backup script's commit

--- a/source/_posts/15.md
+++ b/source/_posts/15.md
@@ -38,7 +38,7 @@ mathjax: true
 
 怎么能够只满足于结论呢！
 
-想了很多种几何意义，想尝试将其与组合数结合，还是没有证明出来。最后在ZYF数竞巨佬的带领下，成功完成了证明，其中的曲折和灵光一现的激动这里就不再阐述。
+想了很多种几何意义，想尝试将其与组合数结合，还是没有证明出来。最后在ZYF数竞巨佬的带领下，成功完成了证明。
 
 证明：
 
@@ -131,4 +131,6 @@ RHS=$C_{m+1}^{2t+1}$
 对这个式子的探究都是期末之前完成的了，这么说来岂不是咕了几个月（
 
 感谢：ZYF，以及帮我联系到ZYF的数竞神仙WZX
+
+
 
