blog auto backup script's commit

--- a/source/_posts/16.md
+++ b/source/_posts/16.md
@@ -1,5 +1,5 @@
 ---
-title: 5月收集的色图
+title: 个人同步到Mega的同人志和散图
 author: 不安きのこ
 avatar: 'https://bbs.bemanicn.cc/uc_server/avatar.php?uid=4174&size=big'
 authorLink: 'https://fuann-kinoko.github.io/'
@@ -11,13 +11,9 @@ tags: 色图
 keywords:
 description:
 ---
-在泥潭某色图群潜伏了很久，搜集到了不少优质色图
+以防万一
 
-放一下5月图包（32P）
-
-[度盘 || 提取码cxne  || 密码kamuro](https://pan.baidu.com/s/1-m9lQPC8ZfSb9kTmq1exRg)
-
-[Mega盘](https://mega.nz/file/O5tH0D5a#Y5nBsxIAS-6ymj9sx7C8WVr_pmKOXVkl1_tDj8HXm28)
+因为图片是用Shigure管理，所以自己找的散图也用同人志的命名规则命名了
 
 预览
 
@@ -26,7 +22,3 @@ description:
 ![22.jpg](https://i.loli.net/2020/06/26/7fmA9MPCz5JVHe6.jpg)
 
 ![30.jpg](https://i.loli.net/2020/06/26/yqkjGNE62etSRua.jpg)
-
-![04.png](https://i.loli.net/2020/06/26/7WpobaEY8nI6BGJ.png)
-
-![01.jpg](https://i.loli.net/2020/06/26/sZ9O7rLQ8qvYXC6.jpg)
