blog auto backup script's commit

--- a/source/_posts/17.md
+++ b/source/_posts/17.md
@@ -15,10 +15,8 @@ description:
 
 因为图片是用Shigure管理，所以自己找的散图也用同人志的命名规则命名了
 
+[Mega 盘](https://mega.nz/folder/3sUk1AjD#mSu1gcP_eF07FvfKnHaO9Q)
+
 预览
 
-![27.jpg](https://i.loli.net/2020/06/26/S7zbJ4EVXqWcTrG.jpg)
-
-![22.jpg](https://i.loli.net/2020/06/26/7fmA9MPCz5JVHe6.jpg)
-
-![30.jpg](https://i.loli.net/2020/06/26/yqkjGNE62etSRua.jpg)
+![27.jpg](https://i.loli.net/2020/08/20/SYgRDeE2s9If7t8.jpg)
