blog auto backup script's commit

--- a/source/_posts/18.md
+++ b/source/_posts/18.md
@@ -59,4 +59,44 @@ sm28110530（生）/ av38444278（熟）
 
 
 
+### 夢幻境旅行記
+
+
+
+幻梦境旅游记
+
+sm28739117（生）/av31604940（熟）
+
+![3.jpg](https://i1.hdslb.com/bfs/archive/e65b0a12ccf202a5c6dcbdae6c22d44f34225608.png)
+
+
+
+莫名其妙来到幻梦境，来一场莫名其妙的冒险吧！
+
+来啦！~【读不懂日语卓】个人第一弹
+
+读不懂日语卓的一大特点就是狂梗连发和轻松愉快氛围，这点在幻梦境这个背景下算是完全发挥了。如果不是在意原作COC严肃氛围的本格党，这几位插科打诨一定足够精彩。在小船上于宇宙间遨游，与自己的朋友一起在世界尽头的海边玩钓鱼游戏……不时，我都会梦到这个replay中的场景，并且在向往的空虚中醒来（笑）。
+
+
+
+### 嘘みたいに上手くいくクトゥルフ神話TRPG - 二つの館
+
+
+
+像是骗人一样顺利的克苏鲁TRPG—两间豪宅
+
+sm29820363（生）/ av36071966（熟）
+
+![4.jpg](https://i2.hdslb.com/bfs/archive/bcba4948663d310c3c65a5a510093d0a7d4b0d98.jpg)
+
+
+
+一觉醒来，六人已经身处于两间无法连接的豪宅之中……在这些人中，也存在着伪装成人类的怪物。如果无法查出真相，无法离开这里。他们要如何逃出生天？
+
+うそうま卓的第一弹，也是我最喜欢的一作
+
+欸？这不是狼人杀？开玩笑，这个模组的核心诡计比单纯的狼人杀好玩多了。本次也是うそうま卓成员发挥完美的一次。教授作为搞笑担当，ちはる天然担当，智力担当的两位也一直非常可靠。这个replay印象最深的是后期的一个惊天大逆转，连KP都没能想到的推理，各位真的太强了！
+
+
+
 待更新……
