--- a/themes/Sakura/languages/zh-cn.yml
+++ b/themes/Sakura/languages/zh-cn.yml
@@ -53,6 +53,10 @@ insight:
     zh: 随想
     en: thoughts
     img: https://cdn.jsdelivr.net/gh/Fuann-Kinoko/cdn@0.1/banner/thoughts.webp
+资源:
+    zh: 资源
+    en: resource
+    img: https://cdn.jsdelivr.net/gh/Fuann-Kinoko/cdn@0.1/banner/resource.webp
 
 #tag
 悦读:
