blog auto backup script's commit

--- a/source/_posts/18.md
+++ b/source/_posts/18.md
@@ -67,7 +67,7 @@ sm28110530（生）/ av38444278（熟）
 
 sm28739117（生）/av31604940（熟）
 
-![3.jpg](https://i1.hdslb.com/bfs/archive/e65b0a12ccf202a5c6dcbdae6c22d44f34225608.png)
+![03](https://i.loli.net/2021/10/04/AJfMuLaND6tmjYR.png)
 
 
 
@@ -87,7 +87,7 @@ sm28739117（生）/av31604940（熟）
 
 sm29820363（生）/ av36071966（熟）
 
-![4.jpg](https://i2.hdslb.com/bfs/archive/bcba4948663d310c3c65a5a510093d0a7d4b0d98.jpg)
+![4.jpg](https://img.cdn.nimg.jp/s/nicovideo/thumbnails/29820363/29820363.original/r1280x720l?key=3cf53a4fb9a9b01f1954cc8c3e6e09bd4fe9ce5a1c76265e2f8561ed1ce840b6)
 
 
 
