blog auto backup script's commit

--- a/source/_posts/17.md
+++ b/source/_posts/17.md
@@ -1,7 +1,7 @@
 ---
 title: 个人同步到Mega的同人志和散图
 author: 不安きのこ
-avatar: 'https://bbs.bemanicn.cc/uc_server/avatar.php?uid=4174&size=big'
+avatar: 'https://cdn.jsdelivr.net/gh/Fuann-Kinoko/cdn@0.1/avatar/avater-tsuki.png'
 authorLink: 'https://fuann-kinoko.github.io/'
 comments: true
 photos: 'https://cdn.jsdelivr.net/gh/Fuann-Kinoko/cdn@0.1/posts/myniji5.webp'
