--- a/source/_posts/18.md
+++ b/source/_posts/18.md
@@ -1,7 +1,7 @@
 ---
 title: 个人看过的TRPG回放动画盘点
 author: 不安きのこ
-avatar: 'https://bbs.bemanicn.cc/uc_server/avatar.php?uid=4174&size=big'
+avatar: 'https://cdn.jsdelivr.net/gh/Fuann-Kinoko/cdn@0.1/avatar/avater-tsuki.png'
 authorLink: 'https://fuann-kinoko.github.io/'
 comments: true
 photos: 'https://cdn.jsdelivr.net/gh/Fuann-Kinoko/cdn@0.1/posts/usagineko.jpg'
@@ -17,13 +17,13 @@ description: ゆっくりしましょう～
 
 ## 盘点
 
-### **MMDer共のシノビガミ　「陽光に照る炎」**
+### **1.MMDer们的忍神「阳光下的火焰」**
 
 
 
-MMDer们的忍神「阳光下的火焰」
+MMDer共のシノビガミ　「陽光に照る炎」
 
-sm35684789（生）/ av884608451（熟）
+[sm35684789（生）](https://www.nicovideo.jp/watch/sm35684789)  /  [av884608451（熟）](https://www.bilibili.com/video/BV16K4y1a77C)
 
 
 
@@ -37,13 +37,13 @@ P1不得不说真是甜的过分了，エムザラ和灵梦的互动真的就像
 
 
 
-### **旅館の捕食者**
+### **2.旅馆的捕食者**
 
 
 
-旅馆的捕食者
+旅館の捕食者
 
-sm28110530（生）/ av38444278（熟）
+[sm28110530（生）](https://www.nicovideo.jp/watch/sm28110530)  /  [av38444278（熟）](https://www.bilibili.com/video/BV1Pt411v7zc)
 
 
 
@@ -59,13 +59,15 @@ sm28110530（生）/ av38444278（熟）
 
 
 
-### 夢幻境旅行記
+### **3.幻梦境旅游记**
 
 
 
-幻梦境旅游记
+夢幻境旅行記
 
-sm28739117（生）/av31604940（熟）
+[sm28739117（生）](https://www.nicovideo.jp/watch/sm28739117)  /  [av31604940（熟）](https://www.bilibili.com/video/BV12W411C7ZJ)
+
+
 
 ![03](https://i.loli.net/2021/10/04/AJfMuLaND6tmjYR.png)
 
@@ -79,13 +81,15 @@ sm28739117（生）/av31604940（熟）
 
 
 
-### 嘘みたいに上手くいくクトゥルフ神話TRPG - 二つの館
+### 4.**像是骗人一样顺利的克苏鲁TRPG—两间豪宅**
 
 
 
-像是骗人一样顺利的克苏鲁TRPG—两间豪宅
+嘘みたいに上手くいくクトゥルフ神話TRPG - 二つの館
 
-sm29820363（生）/ av36071966（熟）
+[sm29820363（生）](https://www.nicovideo.jp/watch/sm29820363)  /  [av36071966（熟）](https://www.bilibili.com/video/BV1ot41127NU)
+
+
 
 ![4.jpg](https://img.cdn.nimg.jp/s/nicovideo/thumbnails/29820363/29820363.original/r1280x720l?key=3cf53a4fb9a9b01f1954cc8c3e6e09bd4fe9ce5a1c76265e2f8561ed1ce840b6)
 
@@ -99,4 +103,68 @@ sm29820363（生）/ av36071966（熟）
 
 
 
-待更新……
+### **5.自己物件**
+
+
+
+自己物件
+
+[sm35740913（生）](https://www.nicovideo.jp/watch/sm35740913)  /  [av243347382（熟）](https://www.bilibili.com/video/BV1Cv411z7J6)
+
+
+
+![...](https://img.cdn.nimg.jp/s/nicovideo/thumbnails/35740913/35740913.48395941.original/r1280x720l?key=126d8eff397e95790d2ff1de839bdcc29801356f3c5c3c558ad236cac8b9df59)
+
+非常日式的突然进入了异空间~请看琴酒二人组要如何逃出生天~
+
+典型的读不懂日语卓，搞笑和本格推理并行的一场团。虽然搞笑桥段是真的多，但是在搞笑之余PL已经完成了十足的推理，能非常轻松又入迷地看完全集。
+
+另外，模组作者**社長様**的立绘也是真的给力。他的模组……啊，等之后推荐到的时候再说吧。
+
+
+
+### **6.哥伦比亚之死**
+
+
+
+哥伦比亚之死
+
+[av90713239](https://www.bilibili.com/video/BV1v7411F7mM)
+
+
+
+![【北美版斯大林之死】【coc跑团】哥伦比亚之死：稚嫩的魔法师们.jpg](https://i.loli.net/2021/10/04/gWO3KIZJP6wlyGL.jpg)
+
+这个……是叫DOC吗？魔改COC规则的一场政治游戏
+
+借用一下别人的推荐词吧：<u>魔改KR历史背景的工团美利坚政治团，看着PL们带着夺权的肮脏与疯狂却想要追随崇高的信仰实现伟大的目标有种莫名的激动人心和热血沸腾，就像是阴沟里的虫子却向往太阳，目标只有一个：人民万岁！</u>
+
+剧情从大概10P彻底进入高潮，从暗斗转为明争，为了每个人心中的正义，向昔日的战友毅然举起枪口。确实让人看得热血沸腾。
+
+另外，这真的是一个成功的跑团“REPLAY”。我看了一下原跑团的log，更加惊叹于KP高超的添笔润色技巧了。事实上原log是很明显的一场游戏，但在replay中PL扮演的角色却真正活了起来，真正有了自己的信念与想法，这一切都是KP的功劳。
+
+选的立绘也好看
+
+
+
+### **7.经历过死亡后探索者们的克苏鲁**
+
+
+
+死を体験した探索者たちのクトゥルフ
+
+[sm29385782（生）](https://www.nicovideo.jp/watch/sm29385782)  /  [av17130612（熟）](https://www.bilibili.com/video/BV1WW411h7JN)
+
+
+
+![....](https://img.cdn.nimg.jp/s/nicovideo/thumbnails/29385782/29385782.original/r1280x720l?key=2c58f42d77af5cac9dab697644ae5ca4cc6939c11ef8050b5f45a5ea9e37be9b)
+
+
+
+首先一大特点，手绘动画。工作量大，作为观众的观感很好。
+
+回到replay本身的话，其实模组是个挺标准的日式密室逃脱。这里PL的智商也算是完美在线了，很多时候是在我都没有想法的时候就解出来了。
+
+至于推荐理由：最后一话。真的真的，加上音乐和动画，简直是我看replay中最浪漫的场景之一了。要形容一下的话，就是宫崎骏的广告动画On Your Mark一样……哦，这算不算剧透呢？
+
+# 待更新……
