blog auto backup script's commit

--- a/source/_posts/18.md
+++ b/source/_posts/18.md
@@ -13,7 +13,7 @@ description: ゆっくりしましょう～
 ---
 ## 最初的话
 
-​		今天打开TRPG收藏夹，突然发现看过的那些模组都忘记了。为了不让当时一瞬的感动消失，感觉还是有些必要记录一下我看的动画。不分顺序，有些是最近看的，有些是突然翻出来的老动画。
+​		今天打开TRPG收藏夹，意外发现过去不少看过的动画都已经没印象了。为了不让当时一瞬的感动消失，感觉还是有些必要，在这里稍微记录一下深藏在回忆中的那些故事。排列不分顺序，有些是最近看的，有些是翻出来的老动画。
 
 ## 盘点
 
@@ -33,7 +33,7 @@ MMDer共のシノビガミ　「陽光に照る炎」
 
 炎热的夏天，互相爱慕着的两人发生的事。
 
-P1不得不说真是甜的过分了，エムザラ和灵梦的互动真的就像初恋的一对小情侣一样。从P2开始突入高潮，P3安定的结尾，エムザラ和灵梦隐藏的使命和命运，让我这个泪腺不高的人泪目了。非常简单的小品作，看完真是感觉いいなぁ～～
+P1甜蜜，エムザラ和灵梦的互动如同初恋的一对小情侣一般。从P2开始突入高潮，P3安定的结尾，エムザラ和灵梦隐藏的使命和命运，还是非常能打动人的。简单的小品作，いいなぁ～～
 
 
 
@@ -55,7 +55,11 @@ P1不得不说真是甜的过分了，エムザラ和灵梦的互动真的就像
 
 许久不见的青梅竹马三人，前往充斥着怪异和杀意的旅馆。
 
-首先，好长……总共是17话吧，熬夜看完都到3点了。从P3进入旅馆后剧情就有意思了起来。旅馆的恐怖氛围营造的很棒，视频投稿者是画师，动画有些时候也会出现极具冲击力的恐怖场面。从后期夹缝求生开始，节奏就紧张了起来，让人欲罢不能。不过这团也太非了……各种搜查全失败，全靠KP放海。最后的结局我也很喜欢，“调查员最终回不去原来的生活”这一点很戳我。
+首先，好长……总共是17话吧，熬夜看完都到3点了。从P3进入旅馆后剧情才向着有趣的方向发展。不止如此，旅馆的神秘恐怖氛围也是营造的相当出色。视频投稿者是画师，这也让动画有了更好的，更具冲击力的恐怖场面。从后期夹缝求生开始，节奏一瞬加快，快马加鞭直至最终回。
+
+关于投点的吐槽……这团也太非了……各种搜查全失败，全靠KP放海。
+
+最后的结局呈现方式我很中意，“调查员最终回不去原来的生活”从某种角度来说还蛮原教旨的。
 
 
 
@@ -73,11 +77,11 @@ P1不得不说真是甜的过分了，エムザラ和灵梦的互动真的就像
 
 
 
-莫名其妙来到幻梦境，来一场莫名其妙的冒险吧！
+莫名其妙来到幻梦境后一边胡乱打闹一边愉快推进主线的神秘模组！
 
-来啦！~【读不懂日语卓】个人第一弹
+【读不懂日语卓】个人第一弹
 
-读不懂日语卓的一大特点就是狂梗连发和轻松愉快氛围，这点在幻梦境这个背景下算是完全发挥了。如果不是在意原作COC严肃氛围的本格党，这几位插科打诨一定足够精彩。在小船上于宇宙间遨游，与自己的朋友一起在世界尽头的海边玩钓鱼游戏……不时，我都会梦到这个replay中的场景，并且在向往的空虚中醒来（笑）。
+读不懂日语卓的一大特点就是狂梗连发和轻松愉快氛围，这点在幻梦境这个背景下算是完全发挥了。如果不是在意原作COC严肃氛围的本格党，这几位的插科打诨一定足够精彩。在小船上于宇宙间遨游，与自己的朋友一起在世界尽头的海边玩钓鱼游戏……事实上，我在梦中也梦见过这个replay中的场景，然后在充满向往的一片空虚中醒来（笑）。
 
 
 
@@ -95,11 +99,11 @@ P1不得不说真是甜的过分了，エムザラ和灵梦的互动真的就像
 
 
 
-一觉醒来，六人已经身处于两间无法连接的豪宅之中……在这些人中，也存在着伪装成人类的怪物。如果无法查出真相，无法离开这里。他们要如何逃出生天？
+一觉醒来，已经身处于两间无法连接的豪宅之中……在这些人中，也存在着伪装成人类的怪物。如果无法查出真相，就无法离开这里。
 
-うそうま卓的第一弹，也是我最喜欢的一作
+うそうま卓的第一弹，也是个人最喜欢的一作
 
-欸？这不是狼人杀？开玩笑，这个模组的核心诡计比单纯的狼人杀好玩多了。本次也是うそうま卓成员发挥完美的一次。教授作为搞笑担当，ちはる天然担当，智力担当的两位也一直非常可靠。这个replay印象最深的是后期的一个惊天大逆转，连KP都没能想到的推理，各位真的太强了！
+乍一看，是个狼人杀，不过这个模组的核心诡计比单纯的狼人杀好玩多了。本次うそうま卓的成员也是发挥出色。教授作为搞笑担当，ちはる依然天然，智力推理的两位也一直非常可靠。这个replay印象最深的是后期的一个惊天大逆转，PL的推理甚至都超出了KP所设想的范围。
 
 
 
@@ -115,9 +119,9 @@ P1不得不说真是甜的过分了，エムザラ和灵梦的互动真的就像
 
 ![...](https://img.cdn.nimg.jp/s/nicovideo/thumbnails/35740913/35740913.48395941.original/r1280x720l?key=126d8eff397e95790d2ff1de839bdcc29801356f3c5c3c558ad236cac8b9df59)
 
-非常日式的突然进入了异空间~请看琴酒二人组要如何逃出生天~
+琴酒二人组突然进入了异空间密室
 
-典型的读不懂日语卓，搞笑和本格推理并行的一场团。虽然搞笑桥段是真的多，但是在搞笑之余PL已经完成了十足的推理，能非常轻松又入迷地看完全集。
+典型的读不懂日语卓，搞笑和推理并行的一场团。虽然搞笑桥段是真的多，但是在玩闹之余PL的推理水平也仍旧在线，能让人非常轻松又入迷地看完全集。
 
 另外，模组作者**社長様**的立绘也是真的给力。他的模组……啊，等之后推荐到的时候再说吧。
 
@@ -141,9 +145,9 @@ P1不得不说真是甜的过分了，エムザラ和灵梦的互动真的就像
 
 剧情从大概10P彻底进入高潮，从暗斗转为明争，为了每个人心中的正义，向昔日的战友毅然举起枪口。确实让人看得热血沸腾。
 
-另外，这真的是一个成功的跑团“REPLAY”。我看了一下原跑团的log，更加惊叹于KP高超的添笔润色技巧了。事实上原log是很明显的一场游戏，但在replay中PL扮演的角色却真正活了起来，真正有了自己的信念与想法，这一切都是KP的功劳。
+另外，这真的是一个成功的跑团“REPLAY”。看了原跑团的log之后，才让人更加惊叹于KP高超的添笔润色技巧。事实上原log是很明显的一场跑团游戏，但在KP的加笔下，replay中PL扮演的角色真正活了起来，真正有了自己的信念与想法。
 
-选的立绘也好看
+（选的立绘也好看）
 
 
 
@@ -161,10 +165,56 @@ P1不得不说真是甜的过分了，エムザラ和灵梦的互动真的就像
 
 
 
-首先一大特点，手绘动画。工作量大，作为观众的观感很好。
+首先一大特点，手绘动画。工作量大，不过作为观众的观感很好。
 
-回到replay本身的话，其实模组是个挺标准的日式密室逃脱。这里PL的智商也算是完美在线了，很多时候是在我都没有想法的时候就解出来了。
+回到replay本身的话，其实模组是个挺标准的日式密室逃脱。PL的推理进度倒是很快，很多时候是在我都没有想法的时候就解出来了。
 
-至于推荐理由：最后一话。真的真的，加上音乐和动画，简直是我看replay中最浪漫的场景之一了。要形容一下的话，就是宫崎骏的广告动画On Your Mark一样……哦，这算不算剧透呢？
+至于推荐理由：最后一话。真的真的，加上音乐和动画，简直是印象中replay中最浪漫的场景之一了。要形容一下的话，就是宫崎骏的广告动画On Your Mark一样……哦，这算不算剧透？
+
+
+
+### **8.褄列奇谈**
+
+
+
+つまさき奇談
+
+[sm29457622（生）](https://www.nicovideo.jp/watch/sm29457622) / [av53020125（熟）](https://www.bilibili.com/video/BV1J4411j7cF)
+
+
+
+![..](https://img.cdn.nimg.jp/s/nicovideo/thumbnails/35171226/35171226.79940098.original/r1280x720l?key=da73fa743adfe76e2f6fa362f303c07d7fed0609cc5ce1aae9924cc8624c3b34)
+
+
+
+经典日式恐怖模组，注重氛围而非jump scare。
+
+依然是直接借用别人的推荐语：<u>这个团给我带来了很多的惊喜，当时看的时候非常难得地有了一种出了一身冷汗的感觉w。我本人非常喜欢这种，明明PL可以从异常中逃出回归日常但是却一头扎进麻烦里的有点原著风的模组</u>
+
+恐怖氛围营造的扎实而浓郁，模组的线索设计也很精巧，可以将PL甚至观众误导至最后一刻。
+
+另外，其实我也带了3次这个团。从个人角度来说——虽然本身自己KP水平不行，但是每次团的体验也还不错。只不过可惜的是，3次都没有人能抵达真结局的终点。
+
+
+
+### **9.淤泥之花与空心石**
+
+
+
+淤泥之花与空心石
+
+av760241345
+
+
+
+![【CoC跑团】【完结合集】淤泥之花与空心石.png](https://i.loli.net/2021/10/20/57kWn8XSsOJL13R.png)
+
+
+
+馒馒来式剧场版动画
+
+仍然是借用推荐语：<u>一句话评价“这样的作品真的是我能免费看的吗？”。工业与污染，城市的混乱与秩序，姐妹感情，家的概念……全篇讨论了非常多的主题，但是在剧情下一点都不突兀。每一话都分为表篇和里篇，双线并行。一开始可能会让观众摸不到头脑，但是当双线汇集的以后绝对是剧情爆炸式的展开。PC的设定尽管开始觉得荒诞，在RP之下也不断丰富而合理了起来。本团非画师团，人物立绘采用现有的漫画，但表现合理，后期剧情展开时配合音效依然有着丰富的张力。评论认为剧情可以超越朝雾卡夫卡。美中不足的是KP对于规则有没吃透的地方，后期也进行了解释。</u>
+
+用漫画角色的手法确实让人联想到馒馒来，不得不说这种方法的表现力真的强……虽然润色有点用力过猛，但习惯后也完全OK。
 
 # 待更新……
