blog auto backup script's commit

--- a/source/_posts/18.md
+++ b/source/_posts/18.md
@@ -99,7 +99,7 @@ P1甜蜜，エムザラ和灵梦的互动如同初恋的一对小情侣一般。
 
 
 
-一觉醒来，已经身处于两间无法连接的豪宅之中……在这些人中，也存在着伪装成人类的怪物。如果无法查出真相，就无法离开这里。
+一觉醒来，你们已经身处于两间无法连接的豪宅之中……在这些人中，也暗藏着外表貌似人类的怪物。若无法查出真相，你们就将无法离开这里。
 
 うそうま卓的第一弹，也是个人最喜欢的一作
 
