blog auto backup script's commit

--- a/source/_posts/19.md
+++ b/source/_posts/19.md
@@ -29,25 +29,55 @@ description:
 
 ## 折腾终端
 
+Windows Terminal, Starship 主题，各种没啥用但是很炫酷的特效（也是从unixporn学的）……
+
 考虑到自己以后的发展方向，说不定现在多玩玩这些也是不错的（笑）。然而，neofetch呀那些东西玩了也不知道有什么用……只是觉得炫酷而已。
 
 倒不如说，如果以后不从事这个方向才搞笑了，白忙活。不过真的很帅呀！终端什么的
 
 ## 折腾IDE
 
-首先是折腾VSCODE。这个倒不算是折腾吧？毕竟也就装装插件什么的，最初试用了...
+首先是折腾VSCODE。这个倒不算是折腾吧？毕竟也就装装插件什么的，最初试用了一阵子的vim模式，感觉实在太难受就放弃了。直到我用vimium-C适应了vim式操作，才第一次感觉vscode的vim模式真不错。
 
-待补充
+用vscode倒是不错，唯一的问题在于启动速度实在是 **太 慢 了**。之前还算是能忍受，但在这个充满折腾且喜新厌旧的学期，对我而言vscode已经不再是自己的首选了。于是，自然而然地，我切换到了sublime中。切换起来倒是挺无痛的，sublime本身的功能已经很完善了，并且，自带的包管理器为我省了很多事。第一次接触到了LSP的概念（其实VSCODE也有，只是包装的太好了我不需要调）。总的来说我对sublime还是相当满意的，只是之后又……开始折腾新的了
+
+## 折腾TWM
+
+Tiling Window Manager... 没记错的话，第一次听见这个是在某个知乎专栏中。由于我对Linux与Mac并不熟悉，对于堆叠式这个概念可谓是一无所知。知乎专栏介绍的是Windows平台下的komorebi，正好，我就去试试呗。
+
+然后我就被其独特的思维方式惊呆了。倒不是“不允许重叠”或是“自动管理”令我惊奇，事实上，一个TWM如果只有窗口管理功能，那么它仍然只是一个废物。真正让人能够从使用鼠标的窗口管理解放出来的，是workspace这个概念。
+
+workspace才是真的让人不再需要考虑每一个窗口该放在哪儿，不再需要alt+tab半天才翻到自己需要的窗口。如果没有workspace，那么你在自动堆叠的窗口中移动也是一件相当痛苦的事情。有了workspace后，每个worspace中之后放上2~3个窗口，这才让键盘操作对比鼠标有了高效性。
+
+然而很遗憾的是，komorebi虽然是用rust编写，但不知道是不是由于与windows的交互机制比较特殊，可以说是相当之慢。除此之外，komorebi在处理windows的多种窗口（会缩略到system tray的，electron的）方面并不优秀。经过持之以恒（大概过了2天）的寻找，我又找到了一个满足我需求的TM。
+
+GlazeWM. 这个TMW在模仿i3方面做到很好（指功能比起现代TWM缺失了很多，不会自动alternate layout，没有monocle模式，没有办法stack window）。它足够轻量，并且窗口管理规则完善，没有必要像komorebi一样设置很多的例外。现在唯一令人担心的是，应用的某些子窗口（例如确定提示窗）如果设定成floating，而又有对其border size的设置，GlazeWM可能会在打开这些窗口时崩溃。
+
+不过总的来说，TWM是一个life improvement，我也很自豪自己在使用TWM。那么原先的堆叠式呢？其实我也并不讨厌，只是没法只用键盘令人感觉有点不适罢了。说不定过几年又和解了呢？
 
 ## 折腾AHK
 
-倒是有一个巨大的收获: [Mykeymap]()，迄今为止最好用的ahk编写快捷键工具
+折腾AHK的需求最开始始于在使用GlazeWM时，无法分清现在所处的窗口到底是哪个。于是我找了一个给当前窗口绘制红色边框的ahk，在此基础上修改了一下，让它只在窗口切换时闪一下。这样就不错了。（说得轻巧但是当时花了大概2~3天才完成）
+
+接着在折腾终端时，又很不爽Windows Terminal在不处于焦点时无法保持透明度，于是在github上找到了相关讨论，用ahk让在创建Windows Terminal时自动设置了透明度。
+
+再之后呢……我意识到了ahk的强大，但找不到什么好用的了。
+
+哦，不对，倒是有一个巨大的收获: [Mykeymap](https://xianyukang.com/MyKeymap.html#mykeymap-%E7%AE%80%E4%BB%8B)，迄今为止最好用的由ahk编写的快捷键工具。现在我已经完全离不开它了。
 
 ## 折腾NeoVim
 
 最开始是为什么折腾呢？其实是我突然有一天有了在网页端编辑块打开vim的需求（事实证明，没有也无所谓，我之后也没用这个功能了，纯属白折腾），于是搜到了firenvim这个插件（很明显这个是给firefox用的吧，我一个edge用户为什么要来凑热闹），安装之后需要通过联动nvim进行使用。于是……又跳进了一个大坑中
 
-但是我不后悔哦！因为Neovide的体验实在太丝滑了, `like a butter`，就算现在写Markdown需要预览我都忍了（事实证明所见即所得对于MD编写也是一个伪需求，不用也没大差别，除了latex编写），因为实在太丝滑了嘛！
+本来想着自己对于vim也算是熟悉了，neovim怎么说不会太折腾，结果lua又把我搞得焦虑了起来。最后还是放弃了从头配置，拿了Astronvim的配置，真香。
+
+我以前一直以为vim在window没有办法作为GUI得到良好的体验，所以一直是放在terminal中使用的。虽然知道有gvim，但是太丑了都不愿意尝试。这次换到了nvim，没想到还找到了Neovide这种体验优秀的GUI。我现在写的这段话就在neovide中写的。
+
+搭配astronvim强大的功能（太多了，toggleterm，telescope，neotree...如果我是从零配置可能永远也搞不懂这些，赞美开发者！），感觉nvim把从终端到编辑几乎IDE可以包含的东西都包括了，而且相当轻量高效。
+
+最后一步路就是编译了吧？想要运行cpp文件，我还是喜欢在sublime中一步build。不过这最后一步路我并不准备也让nvim给包了，大而全并不是nvim的发展方向。
+
+再赞美一次Neovide，因为Neovide的体验实在太丝滑了, `like a butter`，就算现在写Markdown需要预览我都忍了（事实证明所见即所得对于MD编写也是一个伪需求，不用也没大差别，除了latex编写），因为实在太丝滑了嘛！
 
 
 
@@ -65,3 +95,11 @@ description:
 
 技术宅！可怕！可畏口牙！
 
+
+# 真真正正的随想：捕捉一些瞬间
+
+如果能做一个本地的音乐识别软件就好了，识别有没有我本地有的音乐
+
+……这种东西，是不是已经有了呢？
+
+我觉得自己有拖延症：指英语orentation都拖到周四了还是不愿意准备，明天就是呀！幸亏，现在改成线上了，我的压力倒没有那么大就是了。
