blog auto backup script's commit

--- a/source/_posts/20.md
+++ b/source/_posts/20.md
@@ -57,7 +57,7 @@ ranger --copy-config=all
 
     这实际上并不是跳转了目录，而只是在当前目录下又套了一层终端。这时按`<C-d>`退出，只是退回了ranger
 
-    同理，如果此时再输入ranger，那就达成了一个`shell->ranger->shell->ranger`的套娃。
+    同理，如果此时在新的终端中输入ranger，那就达成了一个`shell->ranger->shell->ranger`的套娃。
 
     <center>
         <img style="" src="https://p.sda1.dev/9/b8ddf5b17c7535013a078dd634eae96c/image.png" width = "" alt=""/>
@@ -74,7 +74,7 @@ ranger --copy-config=all
 
 2. **利用source**
 
-    实际这个方法也被记录在了[wiki]()中
+    实际这个方法也被记录在了[wiki](https://github.com/ranger/ranger/wiki/Integration-with-other-programs#changing-directories)中
 
     ranger在退出时，实际已经输出了退出前的目录信息。因此利用`source ranger`或者`. ranger`就可以在退出时跳转至退出前的相应目录。
 
