blog auto backup script's commit

--- a/source/_posts/19.md
+++ b/source/_posts/19.md
@@ -10,6 +10,9 @@ categories:
 tags:
 keywords:
 description:
+password: 0124yvev
+abstract: 本文章有密码保护，请输入密码
+message: 本文章有密码保护，请输入密码
 ---
 
 # 这几个月的胡乱折腾
