blog auto backup script's commit

--- a/source/_posts/20.md
+++ b/source/_posts/20.md
@@ -135,6 +135,34 @@ function ra{
 
 至此跳转问题告一段落
 
+还有一个恼人的细节，在于执行`exe`之后焦点会自动跳转到TOTALCMD上，有时这并不是所需要的
+
+转移焦点到刚刚执行的`Windows Powershell`上：
+
+```powershell
+        $wshell = New-Object -ComObject wscript.shell
+        $wshell.AppActivate('Windows Powershell') # 焦点转移
+```
+
+虽然确实转回来了，但是在`exe`执行完成之前……这导致并没有达到原先想要的效果
+
+要强制在exe结束后执行下一句的话，要利用到一个trick：
+```powerhsell
+xxx.exe | Out-Null
+```
+虽然输出到了Null中，但刚好管道本身的特点保证了exe需要执行完毕
+
+于是，最终的版本就是这样：
+
+```powershell
+        [Console]::OutputEncoding = [System.Text.Encoding]::UTF8 # 不加这句wslpath只会输出UTF-8，导致在通过pipeline时让中文乱码
+        wsl ranger --choosedir=/mnt/c/Users/DELL/ranger_location # 将ranger退出时的路径输出至ranger_location
+        wsl --exec wslpath -w $(cat ~\ranger_location) | cd      # 读取ranger_location中的路径，转换成windows路径，在powershell中跳转
+        D:\totalcmd\TotalCMD64.exe /O /S $(wsl --exec wslpath -w $(cat ~\ranger_location)) | Out-Null # 通过pipeline trick使得只有执行完exe后才会进入下一句
+        $wshell = New-Object -ComObject wscript.shell
+        $wshell.AppActivate('Windows Powershell') # 改变focus的窗口
+```
+
 # 技巧2：用windows默认程序打开软件
 
 主要参考这篇：[How to launch Windows applications from Ranger in Windows Subsystem for Linux (WSL)](https://gist.github.com/TaipanRex/5db9a19304743fe6367b9ef291d2b69b)
